--- a/html,css/style.css
+++ b/html,css/style.css
@@ -55,7 +55,7 @@ body {
     height: 75vh;
     width: 40vw;
     outline: 2px solid white;
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
