--- a/html,css/style.css
+++ b/html,css/style.css
@@ -38,6 +38,7 @@ body {
     height: 75vh;
     width: 40vw;
     outline: 2px solid white;
+    border-radius: 20px;
     box-sizing: border-box;
     margin: 50px;
     padding: 20px;
@@ -77,6 +78,7 @@ body {
     height: 75vh;
     width: 40vw;
     outline: 2px solid white;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -132,11 +134,14 @@ select {
 
 input[type="submit"] {
     padding: 5px 10px;
+    margin: 5px;
     font-size: 25px;
     background-color: rgb(23, 22, 22);
     color: white;
     border: none;
+    border-radius: 10px;
     cursor: pointer;
+    outline: 2px white solid;
 }
 
 textarea{
