project söt fertig sii maybe no feinschliff

--- a/html,css/style.css
+++ b/html,css/style.css
@@ -145,6 +145,8 @@ input[type="submit"] {
 }
 
 textarea{
+    overflow: hidden;
+    resize: none;
     padding: 5px 10px;
     font-size: 25px;
     background-color: rgb(23, 22, 22);
